refatorando separando classes

--- a/par-impar-spring-batch/src/main/resources/application.properties
+++ b/par-impar-spring-batch/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springbatchdb?useUnicode=true?characterEnconding=UTF-8?useTimeZone=true&serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3307/springbatchdb?useUnicode=true?characterEnconding=UTF-8?useTimeZone=true&serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=MySql2021!
+spring.datasource.password=root
 
 #sempre ira inicializar o schema caso exista exibe warning
 spring.batch.jdbc.initialize-schema=always
